[metadata]
name = pygpg
url = https://github.com/marier-nico/pg
author = Nicolas Marier
author_email = software@nmarier.com
license_file = LICENSE
description = A thin wrapper around GPG with friendlier command line options!
long_description = file: README.md
keywords = gpg, cli

[options]
packages = pygpg
install_requires =
    click~=7.1.2
    colorama~=0.4.4;platform_system=="Windows"
    python-gnupg~=0.4.6

[options.entry_points]
console_scripts =
    pg = pygpg.main:main
