[metadata]
name = pygpg
url = https://github.com/marier-nico/pg
author = Nicolas Marier
author_email = software@nmarier.com
license_file = LICENSE
description = A thin wrapper around GPG with friendlier command line options!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gpg, cli
python_requires=">=3.6"

[options]
packages =
    pygpg
    pygpg.commands
    pygpg.display
    pygpg.enums
    pygpg.gnupg_extension
    pygpg.utils
install_requires =
    click~=7.1.2
    colorama~=0.4.4;platform_system=="Windows"
    dataclasses~=0.8;python_version=="3.6"
    python-gnupg~=0.4.6

[options.entry_points]
console_scripts =
    pg = pygpg.main:main
    pygpg = pygpg.main:main
